# VividnessMem-Ai-Roommates

./: LICENSE  README.md
AI/: .gitignore  README.md  Test_Bench.py  _diagnose_failures.py  ai_roommates.py  benchmark_vividness.py  memory_aria.py  memory_rex.py  message_board.py  push_to_github.py  requirements.txt  task_memory.py  test_memory_longscale.py  test_memory_longscale_results.txt  test_organic_memory.py  test_resonance.py  test_resonance_results.txt  test_task_learning.py  test_task_recall.py  web_tools.py  world_tools.py
AI/VividMem-Embed/: README.md
AI/benchmark_results/: JRE-L_no_memory_predictions.json  JRE-L_report.json  JRE-L_vividness_predictions.json  Mem2ActBench_embedding_predictions.json  Mem2ActBench_embedding_report.json  Mem2ActBench_vividness_predictions.json  Mem2ActBench_vividness_report.json  WritingPrompts_no_memory_predictions.json  WritingPrompts_report.json  WritingPrompts_vividness_predictions.json
AI/benchmarks/: baseline_memory_systems.py  benchmark_memory_systems.py  benchmark_report.txt  benchmark_results.json
AI/memory_snapshots/: README.md
AI/standalone memory/: SpecMem.py  VividnessMem.py  howtouse.txt  test_humanlike_memory.py
AI/tests/: test_advanced_memory.py  test_behavioral_integration.py  test_behavioral_integration_results.txt  test_brief_rescore.py  test_detail_recall.py  test_detail_recall_results.txt  test_dream_regret_arcs.py  test_memory_longscale.py  test_memory_robustness.py  (+8 more)
AI/vividnessmem-pypi/: README.md  pyproject.toml
AI/vividnessmem-pypi/src/vividnessmem/: __init__.py  vividnessmem.py
(+11 files in other folders)
