[build-system]
requires = ["setuptools>=68.0,<71.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vividnessmem"
version = "1.0.5"
description = "Organic episodic memory for AI agents — no RAG, no embeddings, no vector DB"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Kronic90" }
]
keywords = [
    "ai", "memory", "llm", "agent", "episodic-memory",
    "vividness", "organic-memory", "conversational-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
encryption = ["cryptography>=41.0"]

[project.urls]
Homepage = "https://github.com/Kronic90/VividnessMem-Ai-Roommates"
Repository = "https://github.com/Kronic90/VividnessMem-Ai-Roommates"
Issues = "https://github.com/Kronic90/VividnessMem-Ai-Roommates/issues"

[tool.setuptools.packages.find]
where = ["src"]
